# Algorithms_for_finding_the_way_in_a_maze

./: CMakeLists.txt  Makefile  README.md  benchmark_summary.csv
benchmarks_with_rooms/: benchmark_comparison_summary.csv  benchmark_jps4_summary.csv
benchmarks_without_rooms/: benchmark_comparison_summary.csv  benchmark_jps4_summary.csv  benchmark_summary.csv
include/: a_star_implementation.h  dijkstra_implementation.h  jps4_implementation.h
mazes/: maze_000.json  maze_001.json  maze_002.json  maze_003.json  maze_004.json  maze_005.json  maze_006.json  maze_007.json  maze_008.json  maze_009.json  maze_010.json  maze_011.json  maze_012.json  maze_013.json  maze_014.json  maze_015.json  maze_016.json  maze_017.json  maze_018.json  maze_019.json  maze_020.json  maze_021.json  maze_022.json  maze_023.json  maze_024.json  maze_025.json  maze_026.json  maze_027.json  maze_028.json  maze_029.json  maze_030.json  maze_031.json  maze_032.json  maze_033.json  maze_034.json  maze_035.json  maze_036.json  maze_037.json  maze_038.json  maze_039.json  (+2 more)
mazes_v2/: maze_000.json  maze_001.json  maze_002.json  maze_003.json  maze_004.json  maze_005.json  maze_006.json  maze_007.json  maze_008.json  maze_009.json  maze_010.json  maze_011.json  maze_012.json  maze_013.json  maze_014.json  maze_015.json  maze_016.json  maze_017.json  maze_018.json  maze_019.json  maze_020.json  maze_021.json  maze_022.json  maze_023.json  maze_024.json  maze_025.json  maze_026.json  maze_027.json  maze_028.json  maze_029.json
mazes_v3/: maze_000.json  maze_001.json  maze_002.json  maze_003.json  (+36 more)
(+53 files in other folders)
